Some archive page spacing fixes

--- a/static/styles.css
+++ b/static/styles.css
@@ -429,6 +429,7 @@ p.archive-tag-list {
 
 main:not(:has(article.post)) h2 {
 	font-size: var(--font-page-h2);
+	margin-bottom: var(--space-xs);
 }
 
 main:not(:has(article.post)) h3 {
@@ -438,12 +439,13 @@ main:not(:has(article.post)) h3 {
 
 .archive-series-list {
 	list-style: none;
+	margin-top: 0;
 	margin-left: 0;
 	padding-left: 0;
 }
 
 .archive-series-list li {
-	margin-bottom: var(--space-lg);
+	margin-bottom: var(--space-md);
 }
 
 .archive-series-list li:last-child {
@@ -453,7 +455,7 @@ main:not(:has(article.post)) h3 {
 .series-desc {
 	font-size: 1.0625rem;
 	margin-left: 0;
-	margin-top: var(--space-sm);
+	margin-top: var(--space-xs);
 }
 
 /* --- Blog posts & lists --- */
